<resources>
    <string name="app_name">PaintingPro</string>
    <string name="reference">Référence :</string>
    <string name="category">Catégorie :</string>
    <string name="application">Application au :</string>
    <string name="diluted">Diluable au :</string>
    <string name="cov">COV :</string>
    <string name="emission">Taux d\'emission :</string>
    <string name="category_choice">Choisissez une catégorie :</string>
    <string name="product_details">Détails produit :</string>

    <string-array name="agencies_coordinates">
        <item>30.406331,-9.574931</item>
        <item>30.423971,-9.563988</item>
        <item>30.399327,-9.536951</item>
    </string-array>

    <string-array name="agencies_phones">
        <item>+334434343434</item>
        <item>+335534343434</item>
        <item>+336634343434</item>
    </string-array>

    <string-array name="product_categories">
        <item>BTP</item>
        <item>Aéronotique</item>
        <item>Intérieur</item>
        <item>Sols</item>
        <item>Voitures</item>
    </string-array>
</resources>
