<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/dark_blue"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/referenceLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/reference" />

            <TextView
                android:id="@+id/referenceValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/applicationLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/application" />

            <TextView
                android:id="@+id/applicationValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/dilutedLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/diluted" />

            <TextView
                android:id="@+id/dilutedValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/covLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/cov" />

            <TextView
                android:id="@+id/covValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/emmissionLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/emission" />

            <TextView
                android:id="@+id/emissionValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/purchaseProductButton"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_marginTop="5dip"
            android:textAllCaps="false"
            android:layout_gravity="center|bottom"
            android:textSize="24dip"
            android:text="Commander le produit" />

    </LinearLayout>
	
</LinearLayout>
